<resources>
    <string name="app_name">Kharche</string>
    <string name="price_category_title">Select Category</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_spent">Add Spent</string>
    <string name="spent_list">Spent List</string>
    <string name="add_category">Add Category</string>
    <string name="category_list">Category List</string>
    <string name="export_db">Export Storage</string>
    <string name="import_db">Import Storage</string>
    <string name="spent_amount">Spent Amount: </string>
    <string name="category">Category: </string>
    <string name="description">Spent On: </string>
    <string name="spent_date_time">Date Time: </string>

    <string name="select_date_type">Select Date</string>

    <string name="category_required">Please enter Category.</string>
    <string name="spent_amount_and_spent_on">Please enter Amount and Title.</string>

    <string name="category_add_success">Category added successfully.</string>
    <string name="category_delete_success">Category deleted successfully.</string>
    <string name="category_spent_associate">Category associated with Spent(s).</string>

    <string name="spent_amount_add_success">Spent added successfully.</string>
    <string name="spent_amount_delete_ask">Do you really want to delete this spent?</string>
    <string name="spent_amount_deleted_success">Spent deleted successfully.</string>

    <string name="category_exist">Category Already exist.</string>
    <string name="unable_to_process">Unable to process your request, please try again.</string>

    <string name="data_not_found">Data not available.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>