<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:checked="true"
        />
    <item
        android:id="@+id/add_spent_amount"
        android:title="@string/add_spent"
        />
    <item
        android:id="@+id/spent_list"
        android:title="@string/spent_list"
        />
    <item
        android:id="@+id/add_category"
        android:title="@string/add_category"
        />
    <item
        android:id="@+id/category_list"
        android:title="@string/category_list"
        />
    <item
        android:id="@+id/export_db"
        android:title="@string/export_db"
        />
<!--    <item-->
<!--        android:id="@+id/export_text_message"-->
<!--        android:title="Export Text Message"-->
<!--        />-->
    <item
        android:id="@+id/import_db"
        android:title="Import Storage(.db)"
    />

</menu>