<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="#ececec"
    android:orientation="vertical"
    tools:context=".SpentListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp">

            <EditText
                android:id="@+id/search_spent_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:hint="Search" />

            <ImageView
                android:id="@+id/search_spent_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/search_icon" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/search_spent_toggle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/filter_icon" />

        <RelativeLayout
            android:id="@+id/main_filter_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_spent_toggle">

            <LinearLayout
                android:id="@+id/category_date_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/search_category"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:entries="@array/price_category"
                        android:prompt="@string/price_category_title" />

                    <Spinner
                        android:id="@+id/spent_date_type"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:entries="@array/date_filter_type"
                        android:prompt="@string/select_date_type" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_filter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_date_container"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/start_date"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="Start Date" />

                    <EditText
                        android:id="@+id/end_date"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="End Date" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/submit_filter_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_filter_container"
                android:layout_marginTop="20dp"
                android:paddingRight="@dimen/common_padding_right" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/common_padding_left"
                    >

                    <Switch
                        android:id="@+id/sort_max_price_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/common_margin_left"
                        android:text="Price on Top: " />
                </LinearLayout>

                <Button
                    android:id="@+id/reset_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="106dp"
                    android:text="Reset"></Button>

                <Button
                    android:id="@+id/submit_filter_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="Filter"></Button>


            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/spent_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_not_found"
        android:layout_marginLeft="@dimen/common_padding_left"
        android:id="@+id/data_not_available"
        />
</LinearLayout>